统一路由及控制器

--- a/static/config/pear.config.json
+++ b/static/config/pear.config.json
@@ -4,7 +4,7 @@
 		"image": "/static/admin/images/logo.png"
 	},
 	"menu": {
-		"data": "/system/menu_config",
+		"data": "/system/menu",
 		"accordion": true,
 		"method": "GET",
 		"control": false,
