--- a/static/config/pear.config.yml
+++ b/static/config/pear.config.yml
@@ -8,7 +8,7 @@ logo:
 ## 菜单配置
 menu: 
   ## 菜单数据来源
-  data: "/system/menu_config"
+  data: "/system/menu"
   ## 菜单接口的请求方式 GET / POST
   method: "GET" 
   ## 是否同时只打开一个菜单目录
